# mlflow

./: .gitignore  1. Install_mlflow_and_dependencies_using_poetry.ipynb  2. Database.ipynb  README.md  mlflow.ipynb  train.py
mlflow_training/: pyproject.toml
mlflow_training_poetry/: pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/7b9efe3b1fd240c4b5650f7313e65f83/: meta.yaml
mlruns/0/7b9efe3b1fd240c4b5650f7313e65f83/artifacts/model/: MLmodel  model.pkl
mlruns/0/7b9efe3b1fd240c4b5650f7313e65f83/metrics/: mae  r2  rmse
mlruns/0/7b9efe3b1fd240c4b5650f7313e65f83/tags/: mlflow.log-model.history  mlflow.runName
notebook/: 1. Install_mlflow_and_dependencies_using_poetry.ipynb  2. Database.ipynb  3. train_a_model.ipynb
poetry/: pyproject.toml
wine/: __init__.py  parameters.py
wine/model/: train.py
wine/model/mlruns/0/: meta.yaml
wine/model/mlruns/0/10e1d53ffd9840eda3cdf417a3b46eee/: meta.yaml
wine/model/mlruns/0/10e1d53ffd9840eda3cdf417a3b46eee/metrics/: mae  r2  rmse
wine/model/mlruns/0/10e1d53ffd9840eda3cdf417a3b46eee/tags/: mlflow.log-model.history  mlflow.runName
wine/model/mlruns/0/57df0e835d4a41a3b469fe1df2af2dfe/: meta.yaml
wine/model/mlruns/0/57df0e835d4a41a3b469fe1df2af2dfe/metrics/: mae  r2  rmse
wine/model/mlruns/0/5836817876864800aa7035fbf2ce17a7/: meta.yaml
wine/model/mlruns/0/65f386d6e3704e7a97a7374b1e2fbdd8/: meta.yaml
wine/model/mlruns/0/a954b4e9cc5347a2bcc434c063889171/: meta.yaml
wine/model/mlruns/0/c6a3f9c8f46d4f9cb9a3a4cac6772d00/: meta.yaml
wine/model/mlruns/0/d57e37bc1193430ea9531e8844107c15/: meta.yaml
(+16 files in other folders)
