[tool.poetry]
name = "mlflow-training"
version = "0.1.0"
description = ""
authors = ["xuyueyang <yangxuyue0222@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_training"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
mlflow = "^1.30.0"
pytest = "^7.2.0"
black = "^22.10.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
