[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["xuyueyang <yangxuyue0222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pycaret = "^2.3.10"
markupsafe = "2.0.1"
lightgbm = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
